creating CRUD-API with node.js and postman

--- a/a .env
+++ b/a .env
@@ -1,7 +1,7 @@
-INSTANCE_URL=cloud-1-faith.harperdbcloud.com
+INSTANCE_URL=https://cloud-1-sample.harperdbcloud.com
 
 INSTANCE_USERNAME=test
 
 INSTANCE_PASSWORD=Test123
 
-INSTANCE_SCHEMA=todos
+INSTANCE_SCHEMA=todo
